# robo-saber

./: .gitignore  README.md  config.yaml  environment.yml  pyproject.toml  requirements.txt  snakefile
beaty_common/: analyze_common.py  bsmg_xror_utils.py  data_utils.py  eval_utils.py  gen_utils.py  pose_utils.py  render_utils.py  segments.py  torch_nets.py  torch_nets2.py  train_utils.py
pauli/: __init__.py
poselib/poselib/core/: __init__.py  tensor_utils.py
poselib/poselib/core/backend/: abstract.py
profiles/default/: config.yaml
proj_utils/: dirs.py  my_logging.py
robo-saber/: do_umds_preproc.py  generate.py  main.py  prep_umds_preproc.py  prepare.py  train_codebook_matching.py
tools/: compare_gen3p.py
torch_saber/: __init__.py  torch_saber.py
torch_saber/utils/: bsmg_xror_utils.py  data_utils.py  pose_utils.py
torch_saber/viz/: visual_data.py
train/: augmenters.py  finetune_llama_7b.py  my_tokenizers.py  otf_datasets.py  pack_boxrr_for_phc.py  player_stat.py  process_stuff.py  qc_boxrr.py  torch_nets.py  torch_nets2.py  train_3pgen.py  train_codebook_matching.py  train_gsvae.py  train_mlp.py  train_mlp_autoregressive.py  train_the.py  train_transformer_autoregressive.py  train_transformer_autoregressive2.py  train_transformer_autoregressive3.py  train_utils.py  train_vanilla_rvq.py  train_vqvae.py
xror/: tilt.py  xror.py
