[project]
name = "robo-saber"
version = "0.1.0"
description = "Robo-Saber: Generating and Simulating VR Players"
requires-python = "==3.11.*"
dynamic = ["dependencies"]

[tool.black]
line-length = 1000000

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = [
    "beaty_common*",
    "vendor*",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[[tool.prepare.downloads]]
gdrive_id = "1TqJBxNk7LEBh7EqcU11tON5Couxiid1c"
path = "models/pretrained.pkl"

[[tool.prepare.downloads]]
gdrive_id = "18q2pp4Qpn6OVau7WTzQGA-QaTdqNfzZh"
path = "data/boxrr23_post_qc.csv"

[[tool.prepare.downloads]]
gdrive_id = "1cZnD0ChtV7lwqUt_RU8HZuo8zWjd6r7H"
path = "data/heldout_player_maps.csv"

[[tool.prepare.downloads]]
gdrive_id = "1cC7aZwjhoHSyZtmHz6UBiby8w7KSGsom"
path = "data/placeholder_3p_sixd.txt"

[[tool.prepare.downloads]]
gdrive_id = "1xJBFYTCzaGzlyShhxH39Jn3lqTOrEb0b"
path = "data/placeholder_3p.txt"
